--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,16 @@ authors = ["Robin Lindner <robin@deeprobin.de>"]
 edition = "2018"
 license = "MIT"
 homepage = "https://deeprobin.de/?reference=bruteforce"
-documentation = "https://github.com/DeepRobin/bruteforce-rs/wiki"
+documentation = "https://docs.rs/bruteforce/"
 repository = "https://github.com/DeepRobin/bruteforce-rs.git"
+keywords = [
+    "security",
+    "iterator",
+    "password",
+    "algorithm",
+    "no_std",
+    "library",
+]
 
 [dependencies]
 no-std-compat = { version = "0.2.0", features = [ "alloc" ] }
