--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Install Rust nightly
         run: |
-          rustup toolchain update --no-self-update 1.41.0-nightly
+          rustup install 1.41.0
           rustup default nightly
           rustup component add clippy rustfmt
       - name: Run rustfmt
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install Rust nightly
         run: |
-          rustup toolchain update --no-self-update nightly
+          rustup install 1.41.0
           rustup default nightly
       - name: Build bruteforce
         run: cargo build --all ${{ matrix.cargo_flags }}
