--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -15,13 +14,9 @@ jobs:
         run: |
           rustup install 1.41.0
           rustup default nightly
-          rustup component add clippy rustfmt
+          rustup component add rustfmt
       - name: Run rustfmt
         run: cargo fmt -- --check
-
-      - name: Run clippy
-        run: cargo clippy --all --all-features -- -Dwarnings
-
   test:
     name: Test
     runs-on: ${{ matrix.os }}
@@ -30,7 +25,6 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         cargo_flags:
           - ""
-          - "--all-features"
         include:
           # Integration tests are disabled on Windows as they take *way* too
           # long to pull the Docker image
