--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,6 @@
-[package]
-name = "bruteforce"
-description = "This is a no_std-compatible brute force/string generation rust-nightly library"
-version = "0.1.7"
-authors = ["Robin Lindner <robin@deeprobin.de>"]
-edition = "2018"
-license = "MIT"
-homepage = "https://deeprobin.de/?reference=bruteforce"
-documentation = "https://docs.rs/bruteforce/"
-repository = "https://github.com/DeepRobin/bruteforce-rs.git"
-keywords = [
-    "security",
-    "iterator",
-    "password",
-    "algorithm",
-    "no_std",
+[workspace]
+
+members = [
+    "bruteforce",
+    "bruteforce-macros"
 ]
-
-[dependencies]
-no-std-compat = { version = "0.3.0", features = [ "alloc" ] }
-
-[features]
-default = [ "std", "constants" ]
-constants = []
-std = [ "no-std-compat/std", "no-std-compat/unstable" ]
-generators = []
