--- a/bruteforce-macros/Cargo.toml
+++ b/bruteforce-macros/Cargo.toml
@@ -27,6 +27,7 @@ std = [ "no-std-compat/std", "no-std-compat/unstable" ]
 
 [dependencies]
 no-std-compat = { version = "0.3.0", features = [ "alloc" ] }
+quote = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
