--- a/bruteforce-macros/Cargo.toml
+++ b/bruteforce-macros/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
 name = "bruteforce-macros"
 edition = "2018"
-version = "0.1.7"
+version = "0.2.0"
 authors = ["Robin Lindner <robin@deeprobin.de>"]
 license = "MIT"
 homepage = "https://deeprobin.de/?reference=bruteforce"
 documentation = "https://docs.rs/bruteforce/"
 repository = "https://github.com/DeepRobin/bruteforce-rs.git"
-description = """
-bruteforce's proc macros.
-"""
+description = "Macro repository for bruteforce-rs"
 keywords = [
     "security",
     "iterator",
