--- a/bruteforce/Cargo.toml
+++ b/bruteforce/Cargo.toml
@@ -19,6 +19,7 @@ keywords = [
 [dependencies]
 no-std-compat = { version = "0.3.0", features = [ "alloc" ] }
 bruteforce-macros = { version = "0.2.0", path = "../bruteforce-macros", optional = true }
+smallvec = { version = "1.2.0", features = ["union"] }
 
 [features]
 default = [ "std", "constants", "bruteforce-macros" ]
