--- a/bruteforce/Cargo.toml
+++ b/bruteforce/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 homepage = "https://deeprobin.de/?reference=bruteforce"
 documentation = "https://docs.rs/bruteforce/"
 repository = "https://github.com/DeepRobin/bruteforce-rs.git"
+readme = "../README.md"
 keywords = [
     "security",
     "iterator",
@@ -15,6 +16,9 @@ keywords = [
     "algorithm",
     "no_std",
 ]
+
+[badges]
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 no-std-compat = { version = "0.3.0", features = [ "alloc" ] }
